--- a/_sass/components/_search.scss
+++ b/_sass/components/_search.scss
@@ -31,7 +31,6 @@ input.gsc-input,
   border-radius: 0;
   margin: 0;
   position: relative;
-  top: 1px;
   &:hover{
     background-color: $color-black;
     opacity: 0.7;
